--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="F-g92e6II7m0HwKNyKJrz4CckfbxtTsCRxzbpG3nPz8" />
     <title>Sudharma Premium Timber Products</title>
     <link rel="icon" type="image/png" href="logo/logo1.png" />
     <link rel="stylesheet" href="css/index.css">
