--- a/html/price&services.html
+++ b/html/price&services.html
@@ -12,11 +12,11 @@
     <nav class="navbar" id="navbar">
         <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="./aboutus.html">About Us</a></li>
-            <li><a href="./gallery.html">Woods</a></li>
-            <li><a href="./price&services.html">Pricing Range</a></li>
-            <li><a href="./contactus.html">Contact Us</a></li>
+            <li><a href="/TimberStoreWeb/index.html">Home</a></li>
+            <li><a href="../html/aboutus.html">About Us</a></li>
+            <li><a href="../html/gallery.html">Woods</a></li>
+            <li><a href="../html/price&services.html">Pricing Range</a></li>
+            <li><a href="../html/contactus.html">Contact Us</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
             <span></span>
