--- a/html/gallery.html
+++ b/html/gallery.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../html/aboutus.html">About Us</a></li>
             <li><a href="../html/gallery.html">Woods</a></li>
             <li><a href="../html/price&services.html">Price Range</a></li>
