--- a/html/gallery.html
+++ b/html/gallery.html
@@ -55,7 +55,7 @@
         </aside>
         <main class="gallery-content">
             <div class="gallery-header">
-                <h1 class="gallery-title">Our Gallery</h1>
+                <h1 class="gallery-title">The Woods We Have</h1>
                 <div class="header-controls">
                     <select class="sort-dropdown" id="sortSelect" onchange="sortProducts()">
                         <option value="default">Default Sorting</option>
