--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -45,13 +45,13 @@
         <div class="about-grid">
             <div class="about-text">
                 <h2>Our Story</h2>
-                <p>For over four decades, Sudharma Timber Store has been at the forefront of sustainable wood sourcing and premium timber products. What started as a small family business in 1985 has grown into a trusted name in the industry, serving contractors, architects, and DIY enthusiasts across the region.</p>
+                <p>For over six decades, Sudharma Timber Store has been at the forefront of sustainable wood sourcing and premium timber products. What started as a small family business in 1963 has grown into a trusted name in the industry, serving contractors, architects, and DIY enthusiasts across the region.</p>
                 <p>Founded by craftsman Sudharma Perera, our company was built on the principles of quality, sustainability, and customer satisfaction. Today, we continue to honor that legacy while embracing modern techniques and eco-friendly practices.</p>
                 <p>Our commitment to excellence extends beyond just selling timber – we're partners in bringing your vision to life, whether it's a rustic farmhouse kitchen, a contemporary office space, or a custom furniture piece that will last generations.</p>
             </div>
             <div class="stats-grid">
                 <div class="stat-item">
-                    <span class="stat-number">40+</span>
+                    <span class="stat-number">60+</span>
                     <span class="stat-label">Years of Experience</span>
                 </div>
                 <div class="stat-item">
