--- a/html/price&services.html
+++ b/html/price&services.html
@@ -45,7 +45,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th>Length (Thickness)</th>
+                                    <th>Width</th>
                                     <th>Price Per Linear Feet</th>
                                 </tr>
                             </thead>
@@ -94,7 +94,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th>Length (Thickness)</th>
+                                    <th>Width</th>
                                     <th>Price Per Linear Feet</th>
                                     <th>Price Per Square Feet</th>
                                 </tr>
@@ -357,7 +357,7 @@
                         <table class="teak-pricing">
                             <thead>
                                 <tr>
-                                    <th>Length (Thickness)</th>
+                                    <th>Width</th>
                                     <th>Price Per Square Feet</th>
                                 </tr>
                             </thead>
