--- a/index.html
+++ b/index.html
@@ -44,40 +44,51 @@
     <section id="products" class="products-section">
         <h2 class="section-title">THE WOOD WE WORK WITH</h2>
         <div class="products-grid">
-            <div class="product-card" onclick="showProductDetails('Solid Wood Planks')">
-                <h3 class="product-title">Solid Wood Planks</h3>
-                <p class="product-description">Premium oak, beech, and ash planks perfect for flooring and construction projects.</p>
-                <div class="product-price">From $45/m³</div>
-                <div class="product-features">
-                    <span class="feature-tag">Sustainable</span>
-                    <span class="feature-tag">Kiln Dried</span>
-                    <span class="feature-tag">Grade A</span>
+            <div class="product-card" onclick="showProductDetails('Ginisapu Timber')">
+                <div class="product-image">
+                    <img src="./TimberPhoto/ginisapu1.webp" alt="Ginisapu Timber" class="timber-image">
+                    <span class="sale-badge">ON SALE</span>
                 </div>
-            </div>
+                <h3 class="product-title">Ginisapu Timber</h3>
+                <p class="product-description">Premium Ginisapu wood known for its durability and beautiful grain pattern, ideal for high-end applications.</p>
 
-            <div class="product-card" onclick="showProductDetails('Reclaimed Timber')">
-                <h3 class="product-title">Reclaimed Timber</h3>
-                <p class="product-description">Beautiful weathered wood with character, perfect for rustic and vintage projects.</p>
-                <div class="product-price">From $65/m³</div>
-                <div class="product-features">
-                    <span class="feature-tag">Eco-Friendly</span>
-                    <span class="feature-tag">Unique Grain</span>
-                    <span class="feature-tag">Historic</span>
-                </div>
-            </div>
-
-            <div class="product-card" onclick="showProductDetails('Engineered Wood')">
-                <h3 class="product-title">Engineered Wood</h3>
-                <p class="product-description">Modern composite materials offering superior strength and stability.</p>
-                <div class="product-price">From $35/m³</div>
                 <div class="product-features">
                     <span class="feature-tag">Durable</span>
-                    <span class="feature-tag">Consistent</span>
-                    <span class="feature-tag">Cost-Effective</span>
+                    <span class="feature-tag">Beautiful Grain</span>
+                    <span class="feature-tag">Premium Quality</span>
+                </div>
+            </div>
+            
+            <div class="product-card" onclick="showProductDetails('Grandis Wood')">
+                <div class="product-image">
+                    <img src="./TimberPhoto/grandis.jpeg" alt="Grandis Wood" class="timber-image">
+                    <span class="sale-badge">ON SALE</span>
+                </div>
+                <h3 class="product-title">Grandis Wood</h3>
+                <p class="product-description">Fast-growing Grandis eucalyptus timber, sustainable choice for various woodworking and construction needs.</p>
+
+                <div class="product-features">
+                    <span class="feature-tag">Sustainable</span>
+                    <span class="feature-tag">Fast-Growing</span>
+                    <span class="feature-tag">Versatile</span>
+                </div>
+            </div>
+            
+            <div class="product-card" onclick="showProductDetails('Mahogany Wood')">
+                <div class="product-image">
+                    <img src="./TimberPhoto/mahogani.webp" alt="Mahogany Wood" class="timber-image">
+                </div>
+                <h3 class="product-title">Mahogany Wood</h3>
+                <p class="product-description">Luxurious mahogany wood, perfect for fine furniture and cabinetry, known for its rich color and grain.</p>
+
+                <div class="product-features">
+                    <span class="feature-tag">Luxurious</span>
+                    <span class="feature-tag">Rich Color</span>
+                    <span class="feature-tag">Fine Grain</span>
                 </div>
             </div>
         </div>
-        <a href="/html/gallery.html" class="cta-button">Explore Woods ▶</a>
+        <a href="./html/gallery.html" class="cta-button">Explore Woods ▶</a>
     </section>
 
     <section id="gallery" class="gallery-section">
