--- a/html/contactus.html
+++ b/html/contactus.html
@@ -27,11 +27,11 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="/index.html" onclick="toggleMenu()">Home</a>
-        <a href="./aboutus.html" onclick="toggleMenu()">About Us</a>
-        <a href="./gallery.html" onclick="toggleMenu()">Woods</a>
-        <a href="./price&services.html" onclick="toggleMenu()">Price Range</a>
-        <a href="./contactus.html" onclick="toggleMenu()">Contact Us</a>
+        <a href="../index.html" onclick="toggleMenu()">Home</a>
+        <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
+        <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
+        <a href="../html/price&services.html" onclick="toggleMenu()">Price Range</a>
+        <a href="../html/contactus.html" onclick="toggleMenu()">Contact Us</a>
     </div>
 
     <section class="contact-hero">
