--- a/html/gallery.html
+++ b/html/gallery.html
@@ -24,6 +24,14 @@
             <span></span>
         </div>
     </nav>
+
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="../index.html" onclick="toggleMenu()">Home</a>
+        <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
+        <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
+        <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
+        <a href="../html/contactus.html" onclick="toggleMenu()">Contact Us</a>
+    </div>
     
     <div class="main-container">
         <aside class="sidebar">
