--- a/html/price&services.html
+++ b/html/price&services.html
@@ -25,6 +25,14 @@
         </div>
     </nav>
 
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="../index.html" onclick="toggleMenu()">Home</a>
+        <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
+        <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
+        <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
+        <a href="../html/contactus.html" onclick="toggleMenu()">Contact Us</a>
+    </div>
+
     <section class="hero-section">
         <div class="hero-content">
             <h1 class="hero-title">PRICING & SERVICES</h1>
