--- a/html/contactus.html
+++ b/html/contactus.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/contactus.css">
     <script src="../js/contactus.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 <body>
     <nav class="navbar" id="navbar">
@@ -19,7 +20,7 @@
             <li><a href="../html/price&services.html">Price Range</a></li>
             <li><a href="../html/contactus.html">Contact Us</a></li>
         </ul>
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger" id="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
             <span></span>
