--- a/html/contactus.html
+++ b/html/contactus.html
@@ -155,14 +155,18 @@
         <div class="map-container">
             <h2 class="section-title">Find Us</h2>
             <p style="color: #cccccc; margin-bottom: 30px; max-width: 600px; margin-left: auto; margin-right: auto;">
-                Located in the heart of the Woodcraft District, our 15,000 sq ft facility houses our showroom, warehouse, and custom millwork shop. Easy parking and loading dock access available.
+                Located in Sri Lanka, our facility houses our showroom, warehouse, and custom millwork shop. Easy parking and loading dock access available.
             </p>
-            <div class="map-placeholder">
-                <div style="text-align: center;">
-                    <div style="font-size: 3rem; margin-bottom: 10px;">🗺️</div>
-                    <p>Interactive Map Coming Soon</p>
-                    <p style="font-size: 0.9rem; margin-top: 10px;">123 Timber Lane, Woodcraft District, WC 12345</p>
-                </div>
+            <div class="map-embed">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7919.4788982283435!2d79.95682912864211!3d7.039876775651451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2f9a5914dd0c5%3A0xbd8c919a0eef1fa3!2sSudharma%20Tmber%20Merchants!5e0!3m2!1sen!2slk!4v1754218037856!5m2!1sen!2slk"
+                    width="100%" 
+                    height="450" 
+                    style="border:0; border-radius: 15px;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </div>
     </section>
