--- a/html/gallery.html
+++ b/html/gallery.html
@@ -6,13 +6,17 @@
     <title>Sudharma Timber Store - Gallery & Shop</title>
     <link rel="icon" type="image/png" href="../logo/logo1.png" />
     <link rel="stylesheet" href="../css/gallery.css">
+    <link rel="stylesheet" href="../css/navbar&footer.css">
     <script src="../js/gallery.js" defer></script>
+    <script src="../js/navbar&footer.js" defer></script>
 </head>
 <body>
+
+    <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
         <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
         <ul class="nav-links" id="navLinks">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../html/index.html">Home</a></li>
             <li><a href="../html/aboutus.html">About Us</a></li>
             <li><a href="../html/gallery.html">Woods</a></li>
             <li><a href="../html/price&services.html">Price Range</a></li>
@@ -25,14 +29,15 @@
         </div>
     </nav>
 
+    <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <a href="../index.html" onclick="toggleMenu()">Home</a>
+        <a href="../html/index.html" onclick="toggleMenu()">Home</a>
         <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
         <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
         <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
         <a href="../html/contactus.html" onclick="toggleMenu()">Contact Us</a>
     </div>
-    
+
     <div class="main-container">
         <aside class="sidebar">
             <div class="filter-section">
