--- a/html/index.html
+++ b/html/index.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="F-g92e6II7m0HwKNyKJrz4CckfbxtTsCRxzbpG3nPz8" />
     <title>Sudharma Premium Timber Products</title>
-    <link rel="icon" type="image/png" href="logo/logo1.png" />
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js" defer></script>
+    <link rel="icon" type="image/png" href="../logo/logo1.png" />
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/navbar&footer.css">
+    <script src="../js/index.js" defer></script>
+    <script src="../js/navbar&footer.js" defer></script>
 </head>
 <body>
+
+    <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
-        <img src="logo/logo2.png" alt="Timber Store Logo" class="logo-img">
-        <ul class="nav-links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./html/aboutus.html">About Us</a></li>
-            <li><a href="./html/gallery.html">Woods</a></li>
-            <li><a href="./html/price&services.html">Price Range</a></li>
-            <li><a href="./html/contactus.html">Contact Us</a></li>
+        <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
+        <ul class="nav-links" id="navLinks">
+            <li><a href="../html/index.html">Home</a></li>
+            <li><a href="../html/aboutus.html">About Us</a></li>
+            <li><a href="../html/gallery.html">Woods</a></li>
+            <li><a href="../html/price&services.html">Price Range</a></li>
+            <li><a href="../html/contactus.html">Contact Us</a></li>
         </ul>
-        <div class="hamburger" id="hamburger" onclick="toggleMenu()">
+        <div class="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
             <span></span>
         </div>
     </nav>
 
+    <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <a href="./index.html" onclick="toggleMenu()">Home</a>
-        <a href="./html/aboutus.html" onclick="toggleMenu()">About Us</a>
-        <a href="./html/gallery.html" onclick="toggleMenu()">Woods</a>
-        <a href="./html/price&services.html" onclick="toggleMenu()">Price Range</a>
-        <a href="./html/contactus.html" onclick="toggleMenu()">Contact Us</a>
+        <a href="../html/index.html" onclick="toggleMenu()">Home</a>
+        <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
+        <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
+        <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
+        <a href="../html/contactus.html" onclick="toggleMenu()">Contact Us</a>
     </div>
 
     <section id="home" class="hero-section">
@@ -127,12 +132,13 @@
         </form>
     </section>
 
+    <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <div class="logo">BIO CWT</div>
-                    <p class="footer-tagline">Crafting excellence in timber since 1985</p>
+                    <div class="logo"><img src="../logo/logo2.png" alt="Sudharma Timber Logo"></div>
+                    <p class="footer-tagline">Crafting excellence in timber since 1963</p>
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link" title="Facebook">📘</a>
@@ -141,18 +147,15 @@
                     <a href="#" class="social-link" title="YouTube">📺</a>
                 </div>
             </div>
-
             <div class="footer-section">
                 <h4 class="footer-title">Products</h4>
                 <ul class="footer-links">
-                    <li><a href="#products">Solid Wood Planks</a></li>
-                    <li><a href="#products">Reclaimed Timber</a></li>
-                    <li><a href="#products">Engineered Wood</a></li>
+                    <li><a href="#products">Hardwood Planks</a></li>
+                    <li><a href="#products">Softwood Timber</a></li>
                     <li><a href="#products">Specialty Woods</a></li>
                     <li><a href="#products">Custom Millwork</a></li>
                 </ul>
             </div>
-
             <div class="footer-section">
                 <h4 class="footer-title">Services</h4>
                 <ul class="footer-links">
@@ -163,29 +166,27 @@
                     <li><a href="#">Project Consultation</a></li>
                 </ul>
             </div>
-
             <div class="footer-section">
                 <h4 class="footer-title">Contact Info</h4>
                 <div class="contact-info">
                     <div class="contact-item">
                         <span class="contact-icon">📍</span>
                         <div>
-                            <p>123 Timber Lane</p>
-                            <p>Woodcraft District, WC 12345</p>
+                            <p>292/1/A, Welipillewa, Ganemulla</p>
+                            <p>WR 12094/TD 2571/AA</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">📞</span>
                         <div>
-                            <p>(555) 123-WOOD</p>
-                            <p>(555) 123-9663</p>
+                            <p>077-011 3070</p>
+                            <p>077-011 3074</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">📩</span>
                         <div>
-                            <p>info@biocwt.com</p>
-                            <p>orders@biocwt.com</p>
+                            <p>sudharmatimberdepot@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -197,11 +198,10 @@
                 </div>
             </div>
         </div>
-
         <div class="footer-bottom">
             <div class="footer-bottom-content">
                 <div class="footer-bottom-left">
-                    <p>&copy; 2025 BIO CWT. All rights reserved.</p>
+                    <p>&copy; 2025 Sudharma Timber Store. All rights reserved.</p>
                     <div class="footer-bottom-links">
                         <a href="#">Privacy Policy</a>
                         <span>•</span>
@@ -216,6 +216,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
