--- a/html/price&services.html
+++ b/html/price&services.html
@@ -6,16 +6,20 @@
     <title>Prices & Services - Sudharma Premium Timber Products</title>
     <link rel="icon" type="image/png" href="../logo/logo1.png" />
     <link rel="stylesheet" href="../css/price&services.css">
+    <link rel="stylesheet" href="../css/navbar&footer.css">
     <script src="../js/price&services.js" defer></script>
+    <script src="../js/navbar&footer.js" defer></script>
 </head>
 <body>
+
+    <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
         <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
+        <ul class="nav-links" id="navLinks">
+            <li><a href="../html/index.html">Home</a></li>
             <li><a href="../html/aboutus.html">About Us</a></li>
             <li><a href="../html/gallery.html">Woods</a></li>
-            <li><a href="../html/price&services.html">Pricing Range</a></li>
+            <li><a href="../html/price&services.html">Price Range</a></li>
             <li><a href="../html/contactus.html">Contact Us</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
@@ -25,8 +29,9 @@
         </div>
     </nav>
 
+    <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <a href="../index.html" onclick="toggleMenu()">Home</a>
+        <a href="../html/index.html" onclick="toggleMenu()">Home</a>
         <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
         <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
         <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
@@ -870,8 +875,89 @@
         <a href="tel:+94-77-123-4567" class="cta-button" style="margin-left: 20px;">Call Us</a>
     </section>
 
+    <!-- Footer Section -->
     <footer class="footer">
-        <p>&copy; 2025 Sudharma Premium Timber Products. All rights reserved. | Sustainable • Professional • Reliable</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <div class="footer-logo">
+                    <div class="logo"><img src="../logo/logo2.png" alt="Sudharma Timber Logo"></div>
+                    <p class="footer-tagline">Crafting excellence in timber since 1963</p>
+                </div>
+                <div class="social-links">
+                    <a href="#" class="social-link" title="Facebook">📘</a>
+                    <a href="#" class="social-link" title="Instagram">📷</a>
+                    <a href="#" class="social-link" title="LinkedIn">💼</a>
+                    <a href="#" class="social-link" title="YouTube">📺</a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h4 class="footer-title">Products</h4>
+                <ul class="footer-links">
+                    <li><a href="#products">Hardwood Planks</a></li>
+                    <li><a href="#products">Softwood Timber</a></li>
+                    <li><a href="#products">Specialty Woods</a></li>
+                    <li><a href="#products">Custom Millwork</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4 class="footer-title">Services</h4>
+                <ul class="footer-links">
+                    <li><a href="#">Wood Sourcing</a></li>
+                    <li><a href="#">Custom Cutting</a></li>
+                    <li><a href="#">Kiln Drying</a></li>
+                    <li><a href="#">Delivery Service</a></li>
+                    <li><a href="#">Project Consultation</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4 class="footer-title">Contact Info</h4>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <span class="contact-icon">📍</span>
+                        <div>
+                            <p>292/1/A, Welipillewa, Ganemulla</p>
+                            <p>WR 12094/TD 2571/AA</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📞</span>
+                        <div>
+                            <p>077-011 3070</p>
+                            <p>077-011 3074</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">📩</span>
+                        <div>
+                            <p>sudharmatimberdepot@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">🕗</span>
+                        <div>
+                            <p>Mon-Sun: 8:00 AM - 5:00 PM</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-bottom-content">
+                <div class="footer-bottom-left">
+                    <p>&copy; 2025 Sudharma Timber Store. All rights reserved.</p>
+                    <div class="footer-bottom-links">
+                        <a href="#">Privacy Policy</a>
+                        <span>•</span>
+                        <a href="#">Terms of Service</a>
+                        <span>•</span>
+                        <a href="#">Sustainability</a>
+                    </div>
+                </div>
+                <div class="footer-bottom-right">
+                    <p>🌱 Sustainably sourced • FSC Certified</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
