fixing index page

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="F-g92e6II7m0HwKNyKJrz4CckfbxtTsCRxzbpG3nPz8" />
     <title>Sudharma Premium Timber Products</title>
-    <link rel="icon" type="image/png" href="../logo/logo1.png" />
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/navbar&footer.css">
-    <script src="../js/index.js" defer></script>
-    <script src="../js/navbar&footer.js" defer></script>
+    <link rel="icon" type="image/png" href="./logo/logo1.png" />
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/navbar&footer.css">
+    <script src="./js/index.js" defer></script>
+    <script src="./js/navbar&footer.js" defer></script>
 </head>
 <body>
 
     <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
-        <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
+        <img src="./logo/logo2.png" alt="Timber Store Logo" class="logo-img">
         <ul class="nav-links" id="navLinks">
-            <li><a href="../html/index.html">Home</a></li>
-            <li><a href="../html/aboutus.html">About Us</a></li>
-            <li><a href="../html/gallery.html">Woods</a></li>
-            <li><a href="../html/price&services.html">Price Range</a></li>
-            <li><a href="../html/contactus.html">Contact Us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./html/aboutus.html">About Us</a></li>
+            <li><a href="./html/gallery.html">Woods</a></li>
+            <li><a href="./html/price&services.html">Price Range</a></li>
+            <li><a href="./html/contactus.html">Contact Us</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
             <span></span>
@@ -31,11 +31,11 @@
 
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <a href="../html/index.html" onclick="toggleMenu()">Home</a>
-        <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
-        <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
-        <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
-        <a href="../html/contactus.html" onclick="toggleMenu()">Contact Us</a>
+        <a href="./index.html" onclick="toggleMenu()">Home</a>
+        <a href="./html/aboutus.html" onclick="toggleMenu()">About Us</a>
+        <a href="./html/gallery.html" onclick="toggleMenu()">Woods</a>
+        <a href="./html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
+        <a href="./html/contactus.html" onclick="toggleMenu()">Contact Us</a>
     </div>
 
     <section id="home" class="hero-section">
@@ -98,7 +98,7 @@
     </section>
 
     <section id="gallery" class="gallery-section">
-        <h2 class="section-title">Our Work</h2>
+        <h2 class="section-title">OUR WORK</h2>
         <div class="gallery-grid">
             <div class="gallery-item">Kitchen Cabinets</div>
             <div class="gallery-item">Flooring Projects</div>
@@ -110,7 +110,7 @@
     </section>
 
     <section id="contact" class="contact-section">
-        <h2 class="section-title">Contact Us</h2>
+        <h2 class="section-title">CONTACT US</h2>
         <form class="contact-form" onsubmit="handleSubmit(event)">
             <div class="form-group">
                 <label for="name">Name</label>
@@ -137,7 +137,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <div class="logo"><img src="../logo/logo2.png" alt="Sudharma Timber Logo"></div>
+                    <div class="logo"><img src="./logo/logo2.png" alt="Sudharma Timber Logo"></div>
                     <p class="footer-tagline">Crafting excellence in timber since 1963</p>
                 </div>
                 <div class="social-links">
