update other html pages

--- a/html/quote.html
+++ b/html/quote.html
@@ -15,7 +15,7 @@
     <nav class="navbar" id="navbar">
         <img src="../logo/logo2.png" alt="Timber Store Logo" class="logo-img">
         <ul class="nav-links" id="navLinks">
-            <li><a href="../html/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../html/aboutus.html">About Us</a></li>
             <li><a href="../html/gallery.html">Woods</a></li>
             <li><a href="../html/price&services.html">Price Range</a></li>
@@ -30,7 +30,7 @@
 
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <a href="../html/index.html" onclick="toggleMenu()">Home</a>
+        <a href="../index.html" onclick="toggleMenu()">Home</a>
         <a href="../html/aboutus.html" onclick="toggleMenu()">About Us</a>
         <a href="../html/gallery.html" onclick="toggleMenu()">Woods</a>
         <a href="../html/price&services.html" onclick="toggleMenu()">Pricing Range</a>
